--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,10 @@ dependencies:
   injectable: ^2.3.5
   get_it: ^7.6.7
   dartz: ^0.10.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
 
@@ -55,7 +57,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_test: ^2.2.2
   build_runner: ^2.4.8
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
