--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   get_it: ^7.6.7
   dartz: ^0.10.1
   json_annotation: ^4.8.1
+  weather: ^3.1.1
+  geolocator: ^11.0.0
 
 dev_dependencies:
 
